--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -1,16 +1,16 @@
-<!-- 繼承模板 -->
+
 {% extends "base.html" %}
 
-<!-- 繼承標題區塊 -->
+
 {% block title %}{{ blog.title }}{% endblock %}
 
 {% block nav_blog_active %}active{% endblock %}
 
-{% load staticfiles %} <!-- 加載靜態文件 -->
+{% load staticfiles %}
 {% block header_extends %}
 <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-{% endblock %}  <!-- 用於擴展額外 css -->
-<!-- 繼承內容區塊 -->
+{% endblock %}
+
 {% block content %}
     <div class="container">
         <div class="row">
@@ -19,11 +19,11 @@
                 <ul class="blog-info-description">
                     <li>作者：{{ blog.author }}</li>
                     <li>分類：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a></li>
-                    <!-- 將日期改為純數字24時制顯示 -->
+
                     <li>發表日期：{{ blog.created_time|date:"Y-m-d H:i:s" }}</li>
                 </ul>
                 <div class="blog-content">{{ blog.content }}</div>
-                <!-- 上一篇、下一篇文章標題連結 -->
+
                 <div class="blog_more">
                     <p>上一篇：
                         {% if previous_blog %}
