--- a/blog/templates/blog/blog_list.html
+++ b/blog/templates/blog/blog_list.html
@@ -19,10 +19,9 @@
                             <div class="blog">
                                 <h3><a href="{% url 'blog_detail' blog.pk %}">{{ blog.title }}</a></h3>
                                 <p class="blog-info">
-                                    <span class="glyphicon glyphicon-tag"></span> <a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a>&nbsp;&nbsp;
-                                    <span class="glyphicon glyphicon-time"></span> {{ blog.created_time|date:"Y-m-d" }}&nbsp;&nbsp;
-                                    閱讀({{ blog.readed_num }})
-                                </p>
+                                        <span class="glyphicon glyphicon-tag"></span>分類：<a href="{% url 'blogs_with_type' blog.blog_type.pk %}">{{ blog.blog_type }}</a>
+                                        <span class="glyphicon glyphicon-time"></span>發表日期：{{ blog.created_time|date:"Y-m-d" }} <span>閱讀({{ blog.get_read_num }})</span>
+                                    </p>
                                 <p>{{ blog.content|striptags|truncatechars:120 }}</p>
                             </div>
                         {% empty %}
