--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,10 +1,13 @@
 h3.home-content {
     font-size: 222%;
-    color: #c7254e;
-    text-align: center; /*置中*/
-    position: absolute; /*改為絕對位置*/
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    text-align: center;
+    margin-top: 4em;
+    margin-bottom: 2em;
+}
 
+div#container {
+    margin: 0 auto;
+    height: 20em;
+    min-width: 20em;
+    max-width: 30em;
 }
