--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
                 gridLineDashStyle: 'Dash',
             },
             series: [{
-                name: '阅读量',
+                name: '閱讀量',
                 data: {{ read_nums }}
             }],
             plotOptions: {
